--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,10 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual environments
-.venv/
-venv/
-ENV/
-env/
-
-# IDEs
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# ChromaDB data
-backend/chroma_db/
-
-# Environment variables
 .env
-
-# Logs
+*.pyc
+__pycache__/
+.venv/
+chroma_db/
 *.log
-
-# OS files
 .DS_Store
-Thumbs.db
+.idea/
+.vscode/
+*.sqlite
