--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,8 @@ services:
     container_name: edumate-local-api-1
     restart: unless-stopped
     environment:
-      OLLAMA_HOST: http://ollama:11434   # talk to the service by name
+      OLLAMA_HOST: http://ollama:11434
+      OLLAMA_MODEL: mistral # talk to the service by name
     volumes:
       - ./backend:/app
       - ./corpus:/app/corpus
