--- a/fly.toml
+++ b/fly.toml
@@ -1,16 +1,23 @@
-app = "edumate-local"
+# fly.toml app configuration file generated for edumate-local on 2025-10-28T16:48:39Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'edumate-local'
+primary_region = 'lhr'
 
 [build]
-  # using Dockerfile
 
-[[services]]
+[http_service]
   internal_port = 8080
-  protocol = "tcp"
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
