--- a/fly.toml
+++ b/fly.toml
@@ -1,23 +1,18 @@
-# fly.toml app configuration file generated for edumate-local on 2025-10-28T16:48:39Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'edumate-local'
-primary_region = 'lhr'
+app = "edumate-local-api"
 
 [build]
+  dockerfile = "Dockerfile"
+
+[env]
+  PORT = "8080"
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  processes = ['app']
 
-[[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
-  memory_mb = 1024
+[[mounts]]
+  source = "chroma_db"
+  destination = "/app/chroma_db"
