--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,6 +17,6 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-# Use correct module path: app.main:app (the FastAPI app is in app/main.py)
-# Ensure this port matches fly.toml internal_port (8080)
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
+ENV PORT=8080
+EXPOSE 8080
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port %PORT%"]
